Fix Sonar finding: replace .collect(toList()) with .toList()